feat: enhance data cleaning process and reporting functionality

--- a/config/limpieza.yaml
+++ b/config/limpieza.yaml
@@ -14,3 +14,9 @@ renglones_eliminar:
   - Nombre: "Entidad"
     valor:
       - "TOTAL"
+
+
+valores_sustituir:
+  - Nombre: "Entidad"
+    valor_viejo: "Distrito Federal"
+    valor_nuevo: "Ciudad de México"
