--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,46 @@
+
+# =========================================
 # Logging & Configuration
+# =========================================
+loguru==0.7.3        # Logging avanzado y sencillo
+omegaconf==2.3.0     # Manejo flexible de configuraciones
 
-loguru==0.7.3
-omegaconf==2.3.0
-
+# =========================================
 # Visualization
-matplotlib>=3.10.8
-seaborn==0.13.2
+# =========================================
+matplotlib==3.10.0   # Graficos y visualizacion
+seaborn==0.13.2      # VisualizaciÃ³n estadÃ­stica
 
+# =========================================
 # Numerical Computing
-numpy>=2.0.0
+# =========================================
+numpy==2.0.0         # Computacion numerica
 
+# =========================================
 # Data Manipulation
-pandas==2.3.3
+# =========================================
+pandas==2.3.0        # Manipulacion y analisis de datos
 
+# =========================================
 # Machine Learning
-scikit-learn>=1.5.0
+# =========================================
+scikit-learn==1.5.0  # Algoritmos de ML y herramientas
 
+# =========================================
 # Project Scaffolding
-cookiecutter-data-science==2.3.0
+# =========================================
+cookiecutter-data-science==2.3.0  # Plantillas para proyectos
 
+# =========================================
 # Jupyter & Development
-ipykernel>=6.29.0
+# =========================================
+ipykernel==6.29.0    # Kernel para notebooks
 
+# =========================================
 # Utilities
-gdown==5.2.0
-typer==0.20.1       # CLI para scripts
-tabulate==0.9.0
-reportlab==4.4.7
+# =========================================
+gdown==5.2.0         # Descarga desde Google Drive
+typer==0.20.1        # CLI para scripts
+tabulate==0.9.0      # Tablas en consola
+reportlab==4.4.7     # Generacion de PDFs
+ruff==0.14.10        # Linter y formateador para Python
