--- a/config/logging.yaml
+++ b/config/logging.yaml
@@ -20,7 +20,7 @@ logging:
       path: "./logs/{time}.log"
       level: "DEBUG"
       colorize: true
-      format: "{time:YYYY-MM-DD HH:mm:ss} | {level: <8} | {message}"
+      format: "{time:YYYY-MM-DD HH:mm:ss} | {level: <8} | {message} | {module}.{function}:{line}"
       rotation: "00:00"
       retention: "7 days"
       compression: "zip"
