--- a/config/params.yaml
+++ b/config/params.yaml
@@ -12,7 +12,10 @@ paths:
   docs: "${paths.reports}/docs"
 
 download:
-  dataset_id: "1YYV3qvaKk0f6MbyVjVwQnhsQqPSWBIA8"
+  dataset_id: "1zFpeQewhh-otoCSMo0OoTc5yGzQlCxRv?"
+  cookies: "use_cookies"
+  force: False  # True: Fuerza la descarga, si el RAW existe, se elimina y se vuelve a descargar.
+
 
 data:
   raw_data_file: "${paths.raw}/data_raw.csv"
