feat: enhance data cleaning and transformation processes

--- a/config/limpieza.yaml
+++ b/config/limpieza.yaml
@@ -1,13 +1,13 @@
 columnas_eliminar:
   - 'Padecimiento'
   - 'Acumulado_anio_anterior'
+  - 'Casos_semana'
 
 valores_sustituir:
   - columna_objetivo: "Entidad"
     texto_a_reemplazar: "Distrito Federal"
     texto_sustituto: "Ciudad de México"
-    
 
 registros_eliminar:
-  - nombre: "Semana"
+  - columna_objetivo: "Semana"
     valor:  53
