--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ seaborn==0.13.2      # VisualizaciÃ³n estadÃ­stica
 # Numerical Computing
 # =========================================
 numpy==2.0.0         # Computacion numerica
+scipy==1.16.3       # Funciones científicas y estadísticas
+
 
 # =========================================
 # Data Manipulation
